fixed search bar z-index issue. Also added link to product pages on search bar suggestions

--- a/app/assets/stylesheets/02_nav-bar.scss
+++ b/app/assets/stylesheets/02_nav-bar.scss
@@ -120,7 +120,13 @@ header h1 {
   padding: 10px;
   background: white;
   border-radius: 5px;
+  border: 0.5px solid lightgray;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.search-list-item {
+  font-size: 14px;
+  text-decoration: none;
 }
 
 .search-focus {
@@ -149,7 +155,18 @@ header h1 {
 }
 
 .search-background-focus {
-  z-index: 0;
+  z-index: 1;
+}
+
+.search-list-focus > a {
+  text-decoration: none;
+  line-height: 2;
+  padding: 0.25em 0.5em;
+}
+
+.search-list-focus > a:hover {
+  cursor: pointer;
+  background-color: rgb(242, 242, 242);
 }
 
 .sign-in button,
